--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 3.26)
 project(CPP_handbook VERSION 0.1.0 LANGUAGES C CXX)
 
 
-add_subdirectory("2_base_constr")
-#add_subdirectory("3_StandLib")
+#add_subdirectory("2_base_constr")
+add_subdirectory("3_StandLib")
