--- a/cpp/3_StandLib/1/CMakeLists.txt
+++ b/cpp/3_StandLib/1/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_executable(1_1 task_1.cpp)
 add_executable(1_2 task_2.cpp)
+add_executable(1_3 task_3.cpp)
+add_executable(1_4 task_4.cpp)
+add_executable(1_5 task_5.cpp)
